--- a/admin/config.yml
+++ b/admin/config.yml
@@ -9,7 +9,7 @@ media_folder: "assets/img/uploads"
 collections:
   - label: "Posts"
     name: "posts"
-    folder: "_posts"
+    folder: "posts"
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
