--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,7 +3,9 @@ backend:
   repo: ux-at-icfnext/practice-netlify-cms # Path to your GitHub repository
   netlify.configure({'site_id': gifted-boyd-d36ba9.netlify.com});
   # optional, defaults to master
-  # branch: main
+  branch: main
+  publish_mode: editorial_workflow
+
 media_folder: "assets/img/uploads"
 
 collections:
